[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/entities/Mob.gd" type="Script" id=1]
[ext_resource path="res://graphics/enemies/dark/darkMookWalk2.png" type="Texture" id=2]
[ext_resource path="res://graphics/enemies/normal/normalMookWalk1.png" type="Texture" id=3]
[ext_resource path="res://graphics/enemies/fey/feyMookAttack.png" type="Texture" id=4]
[ext_resource path="res://graphics/enemies/fey/feyMookIdle.png" type="Texture" id=5]
[ext_resource path="res://graphics/enemies/fire/fireMookWalk1.png" type="Texture" id=6]
[ext_resource path="res://graphics/enemies/fire/fireMookWalk2.png" type="Texture" id=7]
[ext_resource path="res://graphics/enemies/normal/normalMookWalk2.png" type="Texture" id=8]
[ext_resource path="res://graphics/enemies/dark/darkMookWalk1.png" type="Texture" id=9]
[ext_resource path="res://graphics/enemies/dark/darkMookIdle.png" type="Texture" id=10]
[ext_resource path="res://graphics/enemies/normal/normalMookAttack.png" type="Texture" id=11]
[ext_resource path="res://graphics/enemies/normal/normalMookIdle.png" type="Texture" id=12]
[ext_resource path="res://graphics/enemies/dark/darkMookAttack.png" type="Texture" id=13]
[ext_resource path="res://graphics/enemies/fire/fireMookAttack.png" type="Texture" id=14]
[ext_resource path="res://graphics/enemies/fire/fireMookIdle.png" type="Texture" id=15]
[ext_resource path="res://graphics/enemies/fey/feyMookWalk2.png" type="Texture" id=16]
[ext_resource path="res://graphics/enemies/fey/feyMookWalk1.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "attack_dark",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "attack_fey",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "attack_fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "attack_normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle_dark",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle_fey",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle_fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idle_normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk_dark",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk_fey",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk_normal",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 13.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 14.0
height = 24.0

[node name="Mob" type="KinematicBody2D" groups=["mobs"]]
collision_layer = 4
collision_mask = 19
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "walk_fey"
frame = 1
playing = true

[node name="NormalTypeCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="DarkTypeCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="FireTypeCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="FeyTypeCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true
